# musicthing

./: .gitignore  Cargo.toml
src/: main.rs
