[package]
name = "musicthing"
version = "0.1.0"
edition = "2024"
authors = ["GLStudios <contact.me@glstudios.org>", "Lily <contact@gaylily.org>"]

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"

eframe = { version = "0.31", default-features = false, features = [
    "wgpu",
    "wayland",
    "x11",
    "default_fonts",
] }
egui = "*"

# future plans :eyes:
#rusty_ffmpeg = { version = "0.16", features = ["ffmpeg7"] }

rubato = "0.16"
symphonia = { version = "0.5", features = ["opt-simd", "all"] }
cpal = "0.15"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
perf = "deny"
all = "deny"
