[package]
name = "musicthing"
version = "0.1.0"
edition = "2024"
authors = ["GLStudios <contact.me@glstudios.org>", "Lily <contact@gaylily.org>"]

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"

eframe = { version = "0.31", default-features = false, features = [
    "wgpu",
    "wayland",
    "x11",
    "default_fonts",
] }
egui = "*"
rfd = "0.15"

smol = "2.0"
futures-util = { version = "*", features = [
    "io",
] } # needed to get rfd to compile

# future plans :eyes:
#rusty_ffmpeg = { version = "0.16", features = ["ffmpeg7"] }

rubato = "0.16"
symphonia = { git = "https://github.com/GamingLiamStudios/Symphonia.git", branch = "dev-0.6", features = [
    "opt-simd",
    "all",
] }
cpal = "0.15"

zbus = "5.5"
atomig = { version = "0.4", features = ["derive"] }

[patch.crates-io]
cpal = { git = "https://github.com/GamingLiamStudios/cpal.git" }

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
perf = "deny"
all = "deny"
